# soundgen

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: AudioBuffer.h  WaveGenerator.cpp  WaveGenerator.h
src/cli/: CommandParser.cpp  CommandParser.h
src/wav/: WavWriter.cpp  WavWriter.h
